# rpgserver

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
auth_server/: main.cpp
common/: config_manager.cpp  config_manager.h  log_manager.cpp  log_manager.h
config/: auth_server.conf  game_server.conf  gateway_server.conf  server.conf  zone_server.conf
docker/: .dockerignore  Dockerfile.auth  Dockerfile.game  Dockerfile.gateway  Dockerfile.zone  auth_server.env  docker-compose.development.yml
game_server/: main.cpp
gateway_server/: main.cpp
k8s/: auth-server-config.yaml
network/: network_manager.cpp  network_manager.h
scripts/: build_all.sh  build_and_setup.sh  build_linux.sh  build_macos_arm.sh  build_macos_intel.sh  clean.sh  create_configs.sh  deploy_configs.sh  start_all_servers.sh  stop_all_servers.sh
test_client/: main.cpp
zone_server/: main.cpp
